# stelar_client

./: .coveragerc  .gitignore  .readthedocs.yml  AUTHORS.rst  CHANGELOG.rst  CONTRIBUTING.rst  LICENSE.txt  README.md  README.rst  pyproject.toml  requirements.txt  reveal_ckan_apitoken.sh  setup.cfg  setup.py  tox.ini
docs/: authorization.rst  conf.py  datacatalog.rst  index.rst  minio.rst  quickstart.rst  requirements.txt  stelar-klms-auth.rst  stelaroverview.rst  userguide.rst  usermanagement.rst
docs/plantuml/: entitiescls.plantuml  stereotypeents.plantuml  tooldiagram.plantuml
src/stelar/client/: __init__.py  admin.py  api_call.py  apicall.py  backdoor.py  base.py  catalog.py  client.py  dataset.py  endpoints.py  generic.py  group.py  knowgraph.py  license.py  lineage.py  model.py  mutils.py  named.py  package.py  pdutils.py  policy.py  process.py  relationship.py  reprstyle.py  resource.py  s3.py  spatial.py  task_spec.py  tasks.py  test.py  tool.py  user.py  utils.py  vocab.py  wfapi.py  workflows.py
src/stelar/client/proxy/: __init__.py  decl.py  derived.py  exceptions.py  extras.py  fieldvalidation.py  property.py  proxy.py  proxycursor.py  proxylist.py  proxysync.py  refs.py  registry.py  tag.py  typing.py
src/stelar_client/: __init__.py  admin.py  apicall.py  backdoor.py  base.py  catalog.py  client.py  dataset.py  endpoints.py  group.py  knowgraph.py  model.py  mutils.py  organization.py  policy.py  proxy.py  resource.py  s3.py  tag.py  test.ipynb  test.py  user.py  utils.py  workflows.py
src/stelar_client/proxy/: __init__.py  decl.py  derived.py  exceptions.py  extras.py  fieldvalidation.py  property.py  proxy.py  proxylist.py  proxysync.py  refs.py  registry.py  schema.py  tag.py
tests/: conftest.py  misc_test.py  proxy_utils.py  test_connections.py  test_dataset.py  test_field_validation.py  test_generic.py  test_licenses.py  test_pandas.py  test_process.py  test_property.py  test_proxy.py  test_proxy_extras.py  test_proxy_subset.py  test_registry.py  test_relationships.py  test_s3obj.py  test_search.py  test_spatial.py  test_tags.py  test_tasks.py  test_tools.py  test_users.py  test_vocab.py
